# pipe-edit

./: CHANGELOG.md  Cargo.toml  README.md  To use  shell.nix
design/: basic-design.md  rust-crates.md  terminal-keybinding-conflicts.md
src/: main.rs
